--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 
 riot.api.match.history="hello world"
+riot.api.token="RGAPI-accab97b-1574-4beb-93a6-2dfd6f81e4a6"
+riot.api.baseURL=https://europe.api.riotgames.com
+riot.api.summoner.path=/riot/account/v1/accounts/by-riot-id/{0}/EUW
+riot.api.auth.header.key="X-Riot-Token"
