--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
 riot.api.token=RGAPI-a5708206-9a00-45c5-8217-4b21e4f796f3
 riot.api.baseURL=https://europe.api.riotgames.com
-riot.api.summoner.path=/riot/account/v1/accounts/by-riot-id/{0}/EUW
+#riot.api.summoner.path=/riot/account/v1/accounts/by-riot-id/{0}/EUW
 riot.api.auth.header.key=X-Riot-Token
