--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,10 @@ riot.api.token=RGAPI-a5708206-9a00-45c5-8217-4b21e4f796f3
 riot.api.baseURL=https://europe.api.riotgames.com
 #riot.api.summoner.path=/riot/account/v1/accounts/by-riot-id/{0}/EUW
 riot.api.auth.header.key=X-Riot-Token
+
+
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://localhost:3306/league
+spring.datasource.username=user
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
