--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,4 @@ sketch
 # Support for Project snippet scope
 
 # End of https://www.toptal.com/developers/gitignore/api/java,visualstudiocode,maven,react
+application.properties
