--- a/.gitignore
+++ b/.gitignore
@@ -85,4 +85,4 @@ sketch
 
 # End of https://www.toptal.com/developers/gitignore/api/java,visualstudiocode,maven,react
 application.properties
-/react-app
+src/main/react-app
