--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,12 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>1.7.25</version>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.22</version>
+			<scope>provided</scope>
+		</dependency>
 		
 	</dependencies>
 
@@ -59,6 +65,18 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>com.smartnews</groupId>
+				<artifactId>maven-jpa-entity-generator-plugin</artifactId>
+				<version>0.99.8</version>
+				<dependencies>
+				  <dependency>
+					<groupId>mysql</groupId>
+					<artifactId>mysql-connector-java</artifactId>
+					<version>5.1.46</version>
+				  </dependency>
+				</dependencies>
+			  </plugin>
 		</plugins>
 	</build>
 
