--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
 			<version>1.18.22</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>net.coobird</groupId>
+			<artifactId>thumbnailator</artifactId>
+			<version>0.4.11</version>
+		</dependency>
 		
 	</dependencies>
 
