--- a/src/main/react-app/package.json
+++ b/src/main/react-app/package.json
@@ -13,8 +13,9 @@
     "framer-motion": "^6.2.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-lorem-ipsum": "^1.4.9",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.1",
+    "react-router-dom": "5.1.2",
     "react-scripts": "5.0.0",
     "redux-devtools-extension": "^2.13.9",
     "web-vitals": "^2.1.4"
