--- a/src/main/react-app/package.json
+++ b/src/main/react-app/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "5.1.2",
     "react-scripts": "5.0.0",
     "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
