--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,5 @@ sketch
 # End of https://www.toptal.com/developers/gitignore/api/java,visualstudiocode,maven,react
 
 src/main/resources/application.properties
+
+build/
