--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<groupId>it.our</groupId>
 	<artifactId>league</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>ourleague</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
@@ -71,6 +71,10 @@
 			<artifactId>spring-data-mongodb</artifactId>
 			<version>3.0.3.RELEASE</version>
 		</dependency>	
+		<dependency>
+            <groupId>org.springframework.boot</groupId> 
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
 		
 	</dependencies>
 
@@ -80,6 +84,69 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+               <groupId>com.github.eirslett</groupId>
+               <artifactId>frontend-maven-plugin</artifactId>
+               <version>1.6</version>
+               <configuration>
+                   <workingDirectory>src/main/react-app</workingDirectory>
+                   <installDirectory>target</installDirectory>
+               </configuration>
+               <executions>
+                   <execution>
+                       <id>install node and npm</id>
+                       <goals>
+                           <goal>install-node-and-npm</goal>
+                       </goals>
+                       <configuration>
+                           <nodeVersion>v16.14.0</nodeVersion>
+                           <npmVersion>8.8.0</npmVersion>
+                       </configuration>
+                   </execution>
+                   <execution>
+                       <id>npm install</id>
+                       <goals>
+                           <goal>npm</goal>
+                       </goals>
+                       <configuration>
+                           <arguments>install</arguments>
+                       </configuration>
+                   </execution>
+                   <execution>
+                       <id>npm run build</id>
+                       <goals>
+                           <goal>npm</goal>
+                       </goals>
+                       <configuration>
+                           <arguments>run build</arguments>
+                       </configuration>
+                   </execution>
+               </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <executions>
+                    <execution>
+                    	<?m2e execute onConfiguration,onIncremental?>
+                        <phase>generate-resources</phase>
+                        <configuration>
+                            <target>
+                                <copy todir="${project.build.directory}/classes/public">
+                                    <fileset dir="${project.basedir}/src/main/react-app/build"/>
+                                </copy>
+                            </target>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
 		</plugins>
 	</build>
 
