--- a/src/main/react-app/package.json
+++ b/src/main/react-app/package.json
@@ -8,6 +8,7 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.3.1",
+    "@mui/styles": "^5.6.2",
     "@nivo/core": "^0.79.0",
     "@nivo/line": "^0.79.1",
     "@testing-library/jest-dom": "^5.16.1",
