--- a/src/main/react-app/package.json
+++ b/src/main/react-app/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^6.2.4",
+    "net": "^1.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-lorem-ipsum": "^1.4.9",
@@ -23,6 +24,8 @@
     "react-scripts": "5.0.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "sockjs-client": "^1.6.0",
+    "stompjs": "^2.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
