--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,7 @@
                <artifactId>frontend-maven-plugin</artifactId>
                <version>1.6</version>
                <configuration>
-                   <workingDirectory>src/main/react-app</workingDirectory>
+                   <workingDirectory>src/main/frontend</workingDirectory>
                    <installDirectory>target</installDirectory>
                </configuration>
                <executions>
@@ -141,7 +141,7 @@
                         <configuration>
                             <target>
                                 <copy todir="${project.build.directory}/classes/public">
-                                    <fileset dir="${project.basedir}/src/main/react-app/build"/>
+                                    <fileset dir="${project.basedir}/src/main/frontend/build"/>
                                 </copy>
                             </target>
                         </configuration>
